--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "server": "json-server -p 3001 db.json"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
